# @autocargo from //thrift/lib/rust:fbthrift
# Signature<<692c330fb852aadf93b3bd3b6f44e93984e9a9f6>>
[package]
name = "fbthrift"
edition = "2018"
version = "0.0.1+unstable"
publish = false
include = ["src/**/*.rs"]

[dependencies]
anyhow = "*"
async-trait = { version = "*", features = ["support_old_nightly"] }
bufsize = "*"
byteorder = "*"
bytes = { version="0.4", features=["serde"] }
ghost = "*"
num-derive = "*"
num-traits = "*"
thiserror = "*"

[dev-dependencies]
quickcheck = "0.9"
# @end of Signature<<692c330fb852aadf93b3bd3b6f44e93984e9a9f6>>
