# @generated
# @autocargo from //thrift/lib/rust:fbthrift
# Signature<<3350471f3a36831ea0b6b854c56dc1c9f87c2701>>
[package]
name = "fbthrift"
edition = "2018"
version = "0.0.1+unstable"
publish = false
include = ["src/**/*.rs"]

[dependencies]
anyhow = "1.0"
async-trait = { version = "0.1", features = ["support_old_nightly"] }
bufsize = "0.4"
byteorder = "1.3"
bytes = { version = "0.4", features = ["serde"] }
ghost = "0.1"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
quickcheck = "0.9"
# @end of Signature<<3350471f3a36831ea0b6b854c56dc1c9f87c2701>>
